--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,9 @@
 backend:
   name: git-gateway
   branch: master
+  accept_roles: #optional - accepts all users if left out
+    - admin
+    - editor
 
 media_folder: "public/images"
 public_folder: "/images"
