feat: Profesyonel dinamik slug sistemi ve Header CMS entegrasyonu
🎯 Dinamik Slug Sistemi - PROFESYONEL:
- Redirect sistemi kaldırıldı (amatörce çalışıyordu)
- [slug].astro dinamik sayfa sistemi
- Custom slug desteği: page_slug field
- Bekleme yok, CSS sorunsuz yükleniyor

🔗 Custom Slug Sistemi:
- CMS'te page_slug alanı eklendi
- Örnek: '2028-fuar-takvimi', '2028-ozel-fuarlar'
- Pattern validation: sadece küçük harf, rakam, tire
- Fallback: {year}-fuar-takvimi

📝 CMS 'Yeni Yıl Oluştur' Sistemi:
- Folder-based collection
- year, page_slug, menu_order fields
- page_content: title_tr/en, menu_title_tr/en, description_tr/en
- summary: '{{year}} - {{fairs.length}} fuar - {{page_slug}}'

🎯 Header Dinamik Menü - ÇALIŞIYOR:
- getCollection ile aktif yılları çekiyor
- menu_order ile sıralama
- HEADER: Active fair years loaded: 1 ✓
- Yeni yıl eklendikçe menüde otomatik görünür

🗑️ Eski Kronoloji CMS - TEMİZLENDİ:
- timeline collection (📅 Kronoloji) kaldırıldı
- Artık sadece yeni 📜 Kronoloji yapısı

✅ Test Sonuçları:
- DYNAMIC SLUG TR: Slug param: 2027-fuar-takvimi ✓
- DYNAMIC SLUG TR: Year: 2027 ✓
- DYNAMIC SLUG TR: Page title: 2027 Fuar Takvimi ✓
- Build başarılı ✓

🚀 Kullanım:
1. CMS'te 'Yeni Yıl Oluştur' → 2028
2. page_slug: '2028-fuar-takvimi'
3. Yayınla → Header menüde üstte görünür
4. URL: /tr/2028-fuar-takvimi/ (özel slug)

🎪 Sonraki: Kronoloji için aynı sistem

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -12,13 +12,37 @@ editor:
   preview: false
 
 collections:
-  # FUARLAR - Yıl Bazlı Yönetim
+  # FUARLAR - Yeni Yıl Oluşturma Sistemi
   - name: "fair_years"
     label: "🎪 Fuarlar"
-    files:
-      - label: "2026 Fuarları"
-        name: "fairs_2026"
-        file: "src/content/fair-years/2026.yml"
+    folder: "src/content/fair-years"
+    create: true
+    slug: "{{fields.year}}"
+    identifier_field: "year"
+    summary: "{{fields.year}} - {{fields.fairs.length}} fuar - {{fields.page_slug}}"
+    fields:
+      - {label: "📅 Yıl", name: "year", widget: "number", value_type: "int", min: 2020, max: 2035, step: 1, hint: "Fuar yılı (örnek: 2028)"}
+      - {label: "🔗 Sayfa Slug", name: "page_slug", widget: "string", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire kullanın"], hint: "URL için slug (örnek: 2028-fuar-takvimi)"}
+      - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: true, hint: "Bu yıl header menüsünde gösterilsin mi?"}
+      - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Aktif Fuarlar", hint: "Bu yıl nerede gösterilecek?"}
+      - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", min: 1, default: 1, hint: "Header menüsündeki sıralama (1 en üstte)"}
+      - label: "📝 Sayfa İçeriği"
+        name: "page_content"
+        widget: "object"
+        collapsed: true
+        fields:
+          - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", hint: "Örnek: 2028 Fuar Takvimi"}
+          - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", hint: "Örnek: 2028 Fair Calendar"}
+          - {label: "Menü Başlığı (TR)", name: "menu_title_tr", widget: "string", hint: "Header menüde görünecek (örnek: 2028 Fuar Takvimi)"}
+          - {label: "Menü Başlığı (EN)", name: "menu_title_en", widget: "string", hint: "Header menu title (örnek: 2028 Fair Calendar)"}
+          - {label: "Açıklama (TR)", name: "description_tr", widget: "text", hint: "Sayfa açıklaması"}
+          - {label: "Açıklama (EN)", name: "description_en", widget: "text", hint: "Page description"}
+      - label: "Fuar Listesi"
+        name: "fairs"
+        widget: "list"
+        summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date_tr}} • {{fields.basic_info.location_tr}}"
+        collapsed: true
+        minimize_collapsed: true
         fields:
           - label: "Yıl"
             name: "year"
